# shader-sandbox

./: README.md
examples/: ray_trace.frag
shader-sandbox/: CMakeLists.txt  assets.qrc  default.frag  default.vert  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  shader-sandbox.pro  shaderprogrambuilder.cpp  shaderprogrambuilder.h
